--- a/day18/server/package.json
+++ b/day18/server/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "crypto-js": "^4.0.0",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "mysql2": "^2.2.5"
   }
 }
