--- a/day22/user-portal/package.json
+++ b/day22/user-portal/package.json
@@ -16,9 +16,12 @@
     "@angular/compiler": "~10.1.5",
     "@angular/core": "~10.1.5",
     "@angular/forms": "~10.1.5",
+    "@angular/localize": "~10.1.5",
     "@angular/platform-browser": "~10.1.5",
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "bootstrap": "^4.5.0",
     "ngx-toaster": "^1.0.1",
     "ngx-toastr": "^13.1.0",
     "rxjs": "~6.6.0",
