--- a/day22/user-portal/package.json
+++ b/day22/user-portal/package.json
@@ -25,6 +25,7 @@
     "ngx-toaster": "^1.0.1",
     "ngx-toastr": "^13.1.0",
     "rxjs": "~6.6.0",
+    "toastr": "^2.1.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
