--- a/day22/user-portal/package.json
+++ b/day22/user-portal/package.json
@@ -17,11 +17,13 @@
     "@angular/core": "~10.1.5",
     "@angular/forms": "~10.1.5",
     "@angular/localize": "~10.1.5",
-    "@angular/platform-browser": "~10.1.5",
+    "@angular/platform-browser": "^10.1.6",
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
-    "bootstrap": "^4.5.0",
+    "angular-animations": "^0.11.0",
+    "bootstrap": "^4.5.3",
+    "browser-module": "0.0.1",
     "ngx-toaster": "^1.0.1",
     "ngx-toastr": "^13.1.0",
     "rxjs": "~6.6.0",
